# perceptron-supervised-learning

./: .gitignore  CHECKLIST.md  README.md  main.ipynb  pyproject.toml
